# carage

./: .gitignore  README.md
.github/workflows/: rust.yml
carage/: Cargo.toml  Rocket.toml  diesel.toml  swagger.json
carage-app/: next.config.js  package-lock.json  package.json
carage-app/lib/: with-redux-store.js
carage-app/pages/: _app.js  dashboard.js  (+1 more)
carage/migrations/2021-03-22-124120_create_user/: up.sql
carage/migrations/2021-03-22-133113_create_car_model/: down.sql  up.sql
carage/migrations/2021-03-22-135302_create_car/: down.sql  up.sql
carage/migrations/2021-03-23-104928_create_ad/: up.sql
carage/migrations/2021-03-24-140017_shared_cars/: down.sql  up.sql
carage/migrations/2021-03-24-163459_create_ads/: down.sql  up.sql
carage/migrations/2021-03-24-223951_create_fav_ads/: down.sql  up.sql
carage/migrations/2021-03-25-141847_create_maintenance/: down.sql  up.sql
carage/migrations/2021-04-14-103344_change_enum_name/: down.sql  up.sql
carage/migrations/2021-06-09-141644_add_phone_number/: down.sql  up.sql
carage/migrations/2021-06-09-144359_rm_null_cols/: up.sql
carage/migrations/2021-06-15-094405_create_files/: down.sql  up.sql
carage/migrations/2021-06-16-101323_change_body_tipe/: down.sql  up.sql
carage/migrations/2021-06-16-134741_change_fuel_enum/: up.sql
carage/migrations/2021-06-16-134800_populate_models/: up.sql
carage/migrations/2021-06-16-223338_uniq_ads/: up.sql
carage/src/: ad.rs  fairings.rs  main.rs  schema.rs  user.rs
carage/src/ad/: api.rs  fav_ad.rs  mod.rs
carage/src/ad/fav_ad/: api.rs  mod.rs
carage/src/car/: api.rs  fuel.rs  maintenance.rs  mod.rs  model.rs  post.rs  share.rs
carage/src/car/maintenance/: api.rs  mod.rs
carage/src/car/model/: api.rs  mod.rs
carage/src/car/share/: api.rs  mod.rs
carage/src/img/: api.rs  mod.rs
carage/src/predictions/: api.rs  mod.rs
carage/src/user/: api.rs  mod.rs
docs/: index.html
model/: price_prediction.py
scrapper/: dataset.sh  index.js  package-lock.json  package.json
(+71 files in other folders)
