[package]
name = "carage"
version = "0.1.0"
authors = ["jtexeira <a85504@alunos.uminho.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07"] }
dotenv = "0.15.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
chrono = "*"
diesel-derive-enum = { version = "1", features = ["postgres"] }
uuid = { version = "0.8", features = ["v4"] } 
