[package]
name = "carage"
version = "0.1.0"
authors = ["jtexeira <a85504@alunos.uminho.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07"] }
dotenv = "0.15.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", features = ["diesel_postgres_pool"] }
chrono = { version = "*", features = ["serde"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
uuid = { version = "0.8", features = ["v4", "serde"] } 
serde = "*"
lazy_static = "*"
jsonwebtoken = "*"
inline-python = "0.6.0"
tokio = "1.7.0"
